Listo hasta el index4

--- a/index4.html
+++ b/index4.html
@@ -3,8 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio 4</title>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	
+<section id="seccion">
+<div class="cuatro">
+Laboratoria </div><p class="cuatro">es</p><div class="cuatro">TRANSFORMACION</div>	
+</section>	
 </body>
 </html>
