--- a/index1.html
+++ b/index1.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio 1</title>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	
+<div class="uno">
+Laboratoria </div><p class="uno">es</p><div class="uno">TRANSFORMACION</div>
 </body>
 </html>
