--- a/index3.html
+++ b/index3.html
@@ -3,8 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio 3</title>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	
+<section id="seccion">
+<div class="tres">
+Laboratoria </div><p class="tres">es</p><div class="tres">TRANSFORMACION</div>	
+</section>
 </body>
 </html>
