--- a/index5.html
+++ b/index5.html
@@ -7,16 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="cuadrado">Div grande 1</div>
-	<div class="cuadrado cuadro2">Div grande 2
-		<div class="cuadrado divchico2">Div chico 1</div>
-		<div class="cuadrado divchico2">Div chico 2</div>
-		<div class="cuadrado divchico2">Div chico 3</div>
+	<div class="cuadrado div1"></div>
+	<div class="cuadrado cuadro2">
+		<div class="cuadrado divchico2"></div>
+		<div class="cuadrado divchico2"></div>
+		<div class="cuadrado divchico2"></div>
 	</div>
-	<div class="cuadrado cuadro3">Div grande 3
-		<div class="cuadrado">Div chico 1-3</div>
-		<div class="cuadrado">Div chico 2-3</div>
+	<div class="cuadrado cuadro3">
+		<div class="cuadrado divchico3"></div>
+		<div class="cuadrado divchico3"></div>
 	</div>
-	<div class="cuadrado">Div grande 4</div>
+	<div class="cuadrado div4"></div>
 </body>
 </html>
